C2: assert(in_vt->length() == out_vt->length()) failed: mismatch on number of elements

XMLWordPrintable

    • b10

      jdk/incubator/vector/VectorHash.java crashes with

      # Internal Error (/opt/mach5/mesos/work_dir/slaves/983c483a-6907-44e0-ad29-98c7183575e2-S14654/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/70c30587-cac3-4c43-9da3-b32db79c2936/runs/6b7ce9ab-a517-4ec4-a27f-80b4479d4067/workspace/open/src/hotspot/share/opto/vectornode.cpp:1224), pid=24921, tid=24937
      # assert(in_vt->length() == out_vt->length()) failed: mismatch on number of elements
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-internal+0-LTS-2021-01-07-1759264.ekaterina.pavlova.panama-vector)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-internal+0-LTS-2021-01-07-1759264.ekaterina.pavlova.panama-vector, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x19657ce] VectorUnboxNode::Ideal(PhaseGVN*, bool)+0x11e

      The crash occurred when running the test with following stress flags:
       -ea -esa -Xcomp -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -XX:+DeoptimizeALot

      The issue is seen only in panama-vector repository (master branch).
      No crash is seen in jdk16 or latest jdk bits.

      To run the test do:
      > jtreg -timeoutFactor:40 -jdk:build/linux-x64/images/jdk
       -vmoptions:"-Xmx512m -Xcomp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions" -server -XX:-TieredCompilation -XX:+DeoptimizeALot"
       -dir:test/jdk jdk/incubator/vector/VectorHash.java

        There are no Sub-Tasks for this issue.

            Assignee:
            Vladimir Ivanov
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: