8259430: C2: assert(in_vt->length() == out_vt->length()) failed: mismatch on number of elements